@@ -6,6 +6,7 @@ threads=1
 %ggnfs_dir=..\ggnfs-bin\Win32\
 ggnfs_dir=../ggnfs-bin/
 tune_info=Intel(R) Xeon(R) CPU           X5460  @ 3.16GHz,LINUX64,2.18911e-05,0.202416,0.389149,0.100747,96.2505,3158.64
-tune_info=Intel(R) Xeon(R) CPU           X5570  @ 2.93GHz,LINUX64,2.42568e-05,0.200833,0.451996,0.0988934,96.4564,2926.14
+tune_info=Intel(R) Xeon(R) CPU           X5570  @ 2.93GHz,LINUX64,2.26091e-05,0.201408,0.444625,0.0988944,96.4417,2926.13
 ecm_qs_ratio=0.25
 ecm_gnfs_ratio=0.25
+tune_info=Intel(R) Xeon(R) CPU           X5687  @ 3.60GHz,WIN64,1.64962e-005,0.202992,0.293538,0.104529,99.3944,3589.41
